--- a/resurse/css/nav500.css
+++ b/resurse/css/nav500.css
@@ -1,72 +1,61 @@
+@keyframes spatiere-meniu {
+    0% {
+        letter-spacing: -4px;
+    }
+
+    100% {
+        letter-spacing: 2px;
+    }
+}
 
 nav {
-    background-color: #C9A0A0;
-    --inaltime-meniu:25px;
-    --latime-buton:70px;
-    height:var(--inaltime-meniu);
-    position: sticky;
-    top: 0;
-}
-/* 
-ul.meniu li div.imag-icon {
-    display: none;
-}
-    */
-
-ol.meniu li div.img-icon {
-    display: block;
+    padding: 5px;
+    font-size: 1.2rem;
+    --inaltime-meniu: 20px;
 }
 
-
-ol.meniu li .txt-icon {
-    display: none;
-}
-
-ol.meniu ul {
-    display: none;
-    padding: 0;
+#hamburger {
+    width: var(--inaltime-meniu);
+    height: var(--inaltime-meniu);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 ol.meniu {
-    display: flex;
-    list-style-type: none;
-    padding: 0;
-
+    display: none;
+    margin: 0;
+    width: 100%;
+    background-color: #C9A0A0;
 }
 
 ol.meniu li {
-    width: var(--latime-buton);
-    height: var(--inaltime-meniu);
-    border: 2px solid #421112;
-    box-sizing: border-box;
-    text-align: center;
-    font-weight: bold;
-    line-height: var(--inaltime-meniu);
-    transition: all 0.2s linear;
+    margin: 0;
+    width: 100%;
+    border: 1px solid #421112;
 }
 
-ol.meniu li:hover {
-    background-color: #421112;
+ol.meniu > li {
+    animation-name: spatiere-meniu;
+    animation-timing-function: ease-in-out;
+    animation-iteration-count: 1;
+    animation-duration: 0.05s;
+    animation-fill-mode: none;
 }
 
-ol.meniu li:hover ul{
+#hamburger div {
+    width: 100%;
+    height: 15%;
+    background-color: black;
+    border-radius: 2px;
+}
+
+#ch-menu:checked + ol.meniu {
     display: block;
-    background-color: #C9A0A0;
-    position: relative; /*meniul este pus peste sectiune -- se poate repozitiona pe axele xOy*/
-    list-style-type: none; /*fala bullet points*/
-    /* left: -1px; */
+    position: relative;
+    z-index: 1;
 }
 
-ol.meniu li:hover > a, ol.meniu li:hover > div {
-    color:white;
+ol.meniu > li:hover {
+    text-shadow: none;
 }
-
-ol.meniu a, ol.meniu div {
-    color: black;
-    text-decoration: none;
-    transition: all 0.2s linear;
-    display: block;
-    height:100%;
-    cursor:pointer;
-}
-
