--- a/resurse/scss/nav500_output.css
+++ b/resurse/scss/nav500_output.css
@@ -7,19 +7,23 @@
   }
 }
 nav {
+  padding: 5px;
   font-size: 1.2rem;
   height: 20px;
 }
 
 #hamburger {
-  display: block;
-}
-#hamburger span {
-  line-height: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 20px;
   width: 20px;
-  font-size: 20px;
-  margin-left: 5px;
-  display: block;
+}
+#hamburger div {
+  width: 100%;
+  height: 15%;
+  background-color: black;
+  border-radius: 2px;
 }
 
 ol.meniu {
@@ -32,9 +36,13 @@ ol.meniu li {
   margin: 0;
   width: 100%;
   border: 1px solid #421112;
+  background-color: #C9A0A0;
 }
 ol.meniu > li {
-  animation: spatiere-meniu 0.05s ease-in-out 1;
+  animation-name: spatiere-meniu;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: 1;
+  animation-duration: 0.05s;
   animation-fill-mode: none;
 }
 ol.meniu > li:hover {
@@ -43,8 +51,8 @@ ol.meniu > li:hover {
 
 #ch-menu:checked + ol.meniu {
   display: block;
-  position: relative;
-  z-index: 1;
+  position: absolute;
+  z-index: 100;
 }
 
 /*# sourceMappingURL=nav500_output.css.map */
