--- a/resurse/css/general.css
+++ b/resurse/css/general.css
@@ -166,9 +166,9 @@ p, details, #cr {
 
 #zona2 {
     padding: 0;
-    display: flex;
+    display: block;
     background-color: #C9A0A0;
-    overflow: hidden;
+    overflow: auto;
     width: 100%;
     box-sizing: border-box;
     grid-area: zona2;
@@ -375,6 +375,7 @@ figure figcaption {
     border: none;
 }
 
+/* BONUS FORMULA MATHML STILIZATA */
 #formula {
     padding-top: 10px;
     font-size: 1.3rem;
