--- a/views/fragmente/head.ejs
+++ b/views/fragmente/head.ejs
@@ -20,4 +20,4 @@
 <link rel="stylesheet" href="/resurse/scss/nav500_anim_output.css" type="text/css" media="screen and (max-width:500px)">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barrio&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Oxanium:wght@200..800&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&family=Press+Start+2P&display=swap" rel="stylesheet">
