Modificari afisare meniu

--- a/resurse/scss/nav1000.scss
+++ b/resurse/scss/nav1000.scss
@@ -8,7 +8,7 @@ nav {
 
 ol.meniu {
     li {
-        width: $latime-buton;
+        width: 100%;
         height: $inaltime-meniu;
         line-height: $inaltime-meniu;
     }
