--- a/resurse/scss/nav.scss
+++ b/resurse/scss/nav.scss
@@ -1,10 +1,13 @@
 $inaltime-meniu: 40px;
 $latime-buton: 100px;
-$culoare-fundal: #C9A0A0;
-$culoare-bordura: #421112;
-$culoare-hover: #421112;
+$culoare-fundal-nav: #C9A0A0;
+$culoare-fundal: #A77272;
+$culoare-bordura: #5C1E20;
+$culoare-hover: #5C1E20;
 $culoare-text: black;
 $culoare-text-hover: white;
+$culoare-bordura-header: #5C1E20;
+$culoare-transparenta: rgba(255, 255, 255, 0);
 
 @keyframes animatie-submeniu {
     0% {
@@ -23,28 +26,42 @@ $culoare-text-hover: white;
 
 nav {
     font-size: 1.3rem;
-    background-color: $culoare-fundal;
+    background-color: $culoare-transparenta;
     height: $inaltime-meniu;
     position: sticky;
     top: 0;
+    margin-left: -15px;
+    margin-right: -15px;
+    padding-left: 15px;
+    padding-right: 15px;
+    z-index: 1;
+    width: 100%;
+    // border-left: 5px solid $culoare-bordura-header;
+    // border-right: 5px solid $culoare-bordura-header;
+    // border-bottom: 5px solid $culoare-bordura-header;
+    // border-radius: 0 0 30px 30px;
+    // box-shadow: 5px 5px $culoare-bordura-header;
 }
 
 ol.meniu {
     position: relative;
     display: flex;
+    justify-content: center;
     list-style-type: none;
     padding: 0;
 
     li {
-        width: $latime-buton;
+        background-color: $culoare-fundal;
+        width: 35%;
         height: $inaltime-meniu;
         border: 2px solid $culoare-bordura;
-        box-sizing: border-box;
+        border-top: none;
+        // box-sizing: border-box;
         text-align: center;
         font-weight: bold;
         line-height: $inaltime-meniu;
         transition: background-color 0.3s ease-in;
-        text-shadow: 0 -15px rgba(255, 255, 255, 0);
+        text-shadow: 0 -15px $culoare-transparenta;
 
         &:hover {
             background-color: $culoare-hover;
@@ -68,6 +85,7 @@ ol.meniu {
             transform-origin: 50% 0;
             background-color: $culoare-fundal;
             list-style-type: none;
+            width: 100%;
         }
 
         &:hover ul {
@@ -86,6 +104,10 @@ ol.meniu {
     }
 
     ul > li {
+        width: 100%;
+        position: relative;
+        left: -2px;
+
         a {
             text-decoration: underline rgba(255, 255, 255, 0) 1px;
             transition: text-decoration 0.4s ease-in;
