--- a/resurse/scss/nav500_output.css
+++ b/resurse/scss/nav500_output.css
@@ -13,6 +13,11 @@ nav {
   padding-bottom: 5px;
   font-size: 1.2rem;
   height: 20px;
+  border-left: 2px solid #5C1E20;
+  border-right: 2px solid #5C1E20;
+  border-bottom: 2px solid #5C1E20;
+  width: 93%;
+  margin: 0 auto;
 }
 
 #hamburger {
