Adaugat clase + schimbari path-uri

--- a/views/fragmente/header.ejs
+++ b/views/fragmente/header.ejs
@@ -15,28 +15,28 @@
             <div class="img-icon" id="pag1-icon">
                 <span class="fas fa-regular fa-house"></span>
             </div>
-            <div class="txt-icon" id="pag1-text"><a href="index.html" id="pag1">Acasa</a></div>
+            <div class="txt-icon" id="pag1-text"><a class="linkintern" href="/index" id="pag1">Acasa</a></div>
             
         </li>
         <li>
             <div class="img-icon" id="pag2-icon">
                 <span class="fas fa-star fa-fade"></span>
             </div>
-            <a href="#desprenoi" id="pag2" class="txt-icon">Despre noi</a>
+            <a class="linkintern" href="/desprenoi" id="pag2" class="txt-icon">Despre noi</a>
             <ul>
-                <li><a href="#inspiratie" id="secinsp">Inspiratie</a></li>
-                <li><a href="#ceoferim" id="secofer">Ce oferim</a></li>
+                <li><a class="linkintern" href="/desprenoi#inspiratie" id="secinsp">Inspiratie</a></li>
+                <li><a class="linkintern" href="/desprenoi#ceoferim" id="secofer">Ce oferim</a></li>
             </ul>
         </li>
         <li>
             <div class="img-icon" id="pag3-icon">
                 <span class="fa-solid fa-book"></span>
             </div>
-            <a href="" id="pag3" class="txt-icon">Produse</a>
+            <a class="linkintern" href="" id="pag3" class="txt-icon">Produse</a>
             <ul>
-                <li><a href="">Carti</a></li>
-                <li><a href="">Benzi desenate</a></li>
-                <li><a href="">Manga</a></li>                        
+                <li><a class="linkintern" href="">Carti</a></li>
+                <li><a class="linkintern" href="">Benzi desenate</a></li>
+                <li><a class="linkintern" href="">Manga</a></li>                        
             </ul>
         </li>
     </ol>
