--- a/resurse/css/eroare.css
+++ b/resurse/css/eroare.css
@@ -1,5 +1,5 @@
 #err-imag{
-    background-image: url("/resurse/imagini/logo.png");
+    /* background-image: url("/resurse/imagini/logo.png"); */
     background-size: 100% auto;
     background-position: center center;
     background-repeat: no-repeat;
