--- a/resurse/css/general.css
+++ b/resurse/css/general.css
@@ -79,6 +79,7 @@ body {
     margin-right: var(--margine-pagina);
     line-height: 1.5;
     box-sizing: border-box;
+    counter-reset: images;
 }
 
 main {
@@ -477,6 +478,57 @@ video {
     max-width: 500px;
     display: flex;
     justify-self: center;
+}
+
+#grid-galerie {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1rem;
+}
+
+#grid-galerie figure {
+    counter-increment: imag;
+}
+
+#grid-galerie figcaption {
+    display: block;
+}
+
+#grid-galerie figcaption::before {
+    content: counter(imag, lower-alpha) ". ";
+    text-align: center;
+}
+
+#grid-galerie figure:nth-child(2) {
+    grid-area: 1/2/2/3;
+}
+
+#grid-galerie figure:nth-child(3) {
+    grid-area: 1/3/2/4;
+}
+
+#grid-galerie figure:nth-child(4) {
+    grid-area: 1/4/2/5;
+}
+
+#grid-galerie figure:nth-child(6) {
+    grid-area: 2/4/3/5;
+}
+
+#grid-galerie figure:nth-child(7) {
+    grid-area: 3/1/4/2;
+}
+
+#grid-galerie figure:nth-child(8) {
+    grid-area: 3/2/4/3;
+}
+
+#grid-galerie figure:nth-child(9) {
+    grid-area: 3/3/4/4;
+}
+
+#grid-galerie figure:nth-child(10) {
+    grid-area: 3/4/4/5;
 }
 
 @media print {
