--- a/views/pagini/index.ejs
+++ b/views/pagini/index.ejs
@@ -156,6 +156,8 @@
                 </div>
             </div>
             <br><br>
+            <%- include("../fragmente/galerie.ejs") %>
+            <br><br>
         </main>
         <%- include("../fragmente/footer.ejs") %>
     </body>
