--- a/resurse/css/general1000.css
+++ b/resurse/css/general1000.css
@@ -298,3 +298,46 @@ figure source {
     padding: 10px;
     border: none;
 }
+
+#grid-galerie {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1rem;
+}
+
+#grid-galerie figure:nth-child(2) {
+    grid-area: 1/2/2/3;
+}
+
+#grid-galerie figure:nth-child(3) {
+    grid-area: 2/1/3/2;
+}
+
+#grid-galerie figure:nth-child(4) {
+    grid-area: 2/2/3/3;
+}
+
+#grid-galerie figure:nth-child(5) {
+    grid-area: 3/1/4/2;
+}
+
+#grid-galerie figure:nth-child(6) {
+    grid-area: 3/2/4/3;
+}
+
+#grid-galerie figure:nth-child(7) {
+    grid-area: 4/1/5/2;
+}
+
+#grid-galerie figure:nth-child(8) {
+    grid-area: 4/2/5/3;
+}
+
+#grid-galerie figure:nth-child(9) {
+    grid-area: 5/1/6/2;
+}
+
+#grid-galerie figure:nth-child(10) {
+    grid-area: 5/2/6/3;
+}
+
