Adaugat link bootstrap

--- a/views/fragmente/head.ejs
+++ b/views/fragmente/head.ejs
@@ -1,6 +1,8 @@
 <meta charset="UTF-8"> 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="author" content="Bianca S.">
+<link rel="stylesheet" href="/resurse/css/custom.css" type="text/css" />
+<script src="/node_modules/bootstrap/dist/js/bootstrap.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 <link rel="icon" type="image/png" href="./resurse/imagini/favicon/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/svg+xml" href="./resurse/imagini/favicon/favicon.svg">
@@ -18,6 +20,7 @@
 <!-- <link rel="stylesheet" href="/resurse/css/nav500.css" type="text/css" media="screen and (max-width:500px)"> -->
 <link rel="stylesheet" href="/resurse/scss/nav500_output.css" type="text/css" media="screen and (max-width:500px)">
 <link rel="stylesheet" href="/resurse/scss/nav500_anim_output.css" type="text/css" media="screen and (max-width:500px)">
+<link rel="stylesheet" href="/resurse/css/galerie_animata.css" type="text/css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@200..800&family=Press+Start+2P&display=swap" rel="stylesheet">
