Adaugat fragment galerie animata

--- a/views/pagini/index.ejs
+++ b/views/pagini/index.ejs
@@ -170,6 +170,8 @@
             <br>
             <hr class="bara">
             <br>
+            <%- include("../fragmente/galerie_animata.ejs") %>
+            <br>
         </main>
         <%- include("../fragmente/footer.ejs") %>
     </body>
