--- a/resurse/css/nav.css
+++ b/resurse/css/nav.css
@@ -1,94 +1,92 @@
 @keyframes animatie-submeniu {
-    0% {
-        opacity: 0;
-        transform: scaleY(0);
-    }
-    100% {
-        opacity: 1;
-        transform: scaleY(100%); 
-    }
+  0% {
+    opacity: 0;
+    transform: scaleY(0);
+  }
+  100% {
+    opacity: 1;
+    transform: scaleY(100%);
+  }
 }
-
 #hamburger, #ch-menu {
-    display: none;
+  display: none;
 }
 
 nav {
-    font-size: 1.3rem;
-    background-color: #C9A0A0;
-    --inaltime-meniu: 40px;
-    --latime-buton: 100px;
-    height: var(--inaltime-meniu);
-    position: sticky;
-    top: 0;
-}
-
-ol.meniu li div.img-icon{
-    display: inline-block;
-}
-
-ol.meniu ul {
-    display: none;
-    padding: 0;
-    animation-name: animatie-submeniu;
-    animation-timing-function: linear;
-    animation-iteration-count: 1;
-    animation-duration: 0.5s;
-    animation-fill-mode: forwards;
-    transform-origin: 50% 0;
+  font-size: 1.3rem;
+  background-color: rgba(255, 255, 255, 0);
+  height: 40px;
+  position: sticky;
+  top: 0;
+  margin-left: -15px;
+  margin-right: -15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  z-index: 1;
+  width: 100%;
 }
 
 ol.meniu {
-    display: flex;
-    list-style-type: none;
-    padding: 0;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  padding: 0;
 }
-
 ol.meniu li {
-    width: var(--latime-buton);
-    height: var(--inaltime-meniu);
-    border: 2px solid #421112;
-    box-sizing: border-box;
-    text-align: center;
-    font-weight: bold;
-    line-height: var(--inaltime-meniu);
-    transition: background-color 0.3s ease-in;
-    text-shadow: 0 -15px rgba(255, 255, 255, 0); /*IMPORTANT: CODUL ASTA E PENTRU CULOAREA **TRANSPARENTA** */
+  background-color: #A77272;
+  width: 35%;
+  height: 40px;
+  border: 2px solid #5C1E20;
+  border-top: none;
+  text-align: center;
+  font-weight: bold;
+  line-height: 40px;
+  transition: background-color 0.3s ease-in;
+  text-shadow: 0 -15px rgba(255, 255, 255, 0);
 }
-
 ol.meniu li:hover {
-    background-color: #421112; 
+  background-color: #5C1E20;
+  text-shadow: 0 0 2px white;
 }
-
-ol.meniu>li:hover {
-    text-shadow: 0 0 2px white;
+ol.meniu li:hover > .txt-icon a,
+ol.meniu li:hover > div,
+ol.meniu li:hover > a {
+  color: white;
 }
-
-ol.meniu li:hover ul{
-    display: block;
-    background-color: #C9A0A0;
-    position: relative;
-    list-style-type: none;
+ol.meniu li div.img-icon {
+  display: inline-block;
 }
-
+ol.meniu li ul {
+  display: none;
+  padding: 0;
+  animation: animatie-submeniu 0.5s linear forwards;
+  transform-origin: 50% 0;
+  background-color: #A77272;
+  list-style-type: none;
+  width: 100%;
+}
+ol.meniu li:hover ul {
+  display: block;
+  position: relative;
+}
 ol.meniu a, ol.meniu div {
-    color: black;
-    text-decoration: none;
-    transition: all 0.5s ease-in;
-    display: inline-flex;
-    height: 100%;
-    cursor: pointer;
+  color: black;
+  text-decoration: none;
+  transition: all 0.5s ease-in;
+  display: inline-block;
+  height: 100%;
+  cursor: pointer;
 }
-
+ol.meniu ul > li {
+  width: 100%;
+  position: relative;
+  left: -2px;
+}
 ol.meniu ul > li a {
-    text-decoration: underline rgba(255, 255, 255, 0) 1px;
-    transition: text-decoration 0.4s ease-in;
+  text-decoration: underline rgba(255, 255, 255, 0) 1px;
+  transition: text-decoration 0.4s ease-in;
 }
-
 ol.meniu ul > li:hover a {
-    text-decoration: underline white 1px;
-}
-
-ol.meniu li:hover > .txt-icon a , ol.meniu li:hover > div , ol.meniu li:hover > a {
-    color:white;
+  text-decoration: underline white 1px;
 }
