--- a/resurse/css/nav1000.css
+++ b/resurse/css/nav1000.css
@@ -1,12 +1,14 @@
 nav {
-    font-size: 1.2rem;
-    --inaltime-meniu: 30px;
-    --latime-buton: 80px;
+  font-size: 1.2rem;
+  height: 30px;
+}
+
+ol.meniu li {
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
 }
 
 #pag1-text {
-    display: none;
+  display: none;
 }
-
-/* ol.meniu li {
-} */
