--- a/resurse/scss/custom.scss
+++ b/resurse/scss/custom.scss
@@ -21,5 +21,12 @@
         lg: 1000px,
         xl: 1200px,
         xxl: 1400px
-    )
+    ),
+    $form-select-border-color: #5C1E20,
+    $form-select-bg: white,
+    $input-bg: white,
+    $form-range-thumb-width: 1.5rem,
+    $form-range-track-bg: #ffeaea,
+    $form-range-thumb-bg: #421112,
+    $btn-font-size: 20px
 )
