--- a/resurse/css/galerie_animata.css
+++ b/resurse/css/galerie_animata.css
@@ -1,48 +1,67 @@
-#galerie-anim {
-  display: block;
-  position: relative;
-  width: 800px;
-  height: 500px;
-  overflow: hidden;
-  border: 20px solid black;
-}
-#galerie-anim img {
+.slides {
   position: absolute;
   top: 0;
   left: 0;
+  display: none;
   width: 100%;
-  height: 100%;
-  opacity: 0;
-  transform-origin: center left;
-  animation: animatie-drop 6s infinite linear;
+  height: 500px;
+  transform-origin: left center;
+  z-index: 1;
+  opacity: 1;
 }
-#galerie-anim img:nth-child(1) {
-  animation-delay: 0s;
+.slides.active {
+  display: block;
+  animation: slideAnim 1.8s ease-in-out both;
+  z-index: 3;
 }
-#galerie-anim img:nth-child(2) {
-  animation-delay: 6s;
+.slides.visible {
+  display: block;
+  z-index: 2;
+  opacity: 0.5;
+  animation: opac 1.5s ease-in-out both;
 }
-#galerie-anim img:nth-child(3) {
-  animation-delay: 12s;
+
+#galerie-anim {
+  border: 10px solid black;
+  width: 80%;
+  max-width: 500px;
+  height: 500px;
+  margin: 2rem auto;
+  overflow: hidden;
+  position: relative;
 }
-#galerie-anim img:nth-child(4) {
-  animation-delay: 18s;
-}
-#galerie-anim img:nth-child(5) {
-  animation-delay: 24s;
-}
-#galerie-anim img:nth-child(6) {
-  animation-delay: 30s;
-}
-#galerie-anim img:nth-child(7) {
-  animation-delay: 36s;
-}
-@keyframes animatie-drop {}
-#galerie-anim:hover img {
+#galerie-anim:hover .slides {
   animation-play-state: paused;
 }
-@media (max-width: 1000px) {
-  #galerie-anim {
-    display: none;
+
+@keyframes slideAnim {
+  0% {
+    height: 500px;
+    top: 0;
+    opacity: 1;
+  }
+  10% {
+    transform: rotateZ(0);
+    opacity: 0.9;
+  }
+  30% {
+    height: 70px;
+    transform: rotateZ(0);
+    top: 50%;
+    opacity: 0.5;
+  }
+  100% {
+    height: 50px;
+    transform: rotateZ(180deg);
+    top: 50%;
+    opacity: 0;
+  }
+}
+@keyframes opac {
+  0% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
   }
 }
